@@ -1,4 +1,7 @@
 -XX:+UseCompactObjectHeaders
--XX:+UseZGC
--Xms2g
--Xmx2g
+-XX:+UseParallelGC
+-XX:+UnlockExperimentalVMOptions
+-XX:+EnableVectorReboxing
+-XX:+EnableVectorAggressiveReboxing
+-XX:+AlwaysPreTouch
+-XX:MaxInlineLevel=20
